migrate to mysql

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,11 @@
 db {
   demo_db {
-    driver = "org.h2.Driver"
+    driver = "com.mysql.jdbc.Driver"
     //name =
-    url = "jdbc:h2:mem:play"
-   // user =
-   // password =
+    //url = "jdbc:mysql://localhost/mydatabase"
+    url = "jdbc:h2:mem:play;MODE=MySQL"
+    //user = "root"
+    //password = "1"
     maxPoolSize = 10
     logAbandoned = true
   }
