migrate to mysql

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,9 @@ db {
     driver = "com.mysql.jdbc.Driver"
     //name =
     //url = "jdbc:mysql://localhost/mydatabase"
-    url = "jdbc:h2:mem:play;MODE=MySQL"
-    //user = "root"
-    //password = "1"
+    url = "jdbc:mysql://localhost/purchase"
+    user = "root"
+    password = "1"
     maxPoolSize = 10
     logAbandoned = true
   }
